--- a/views/articles/index.ejs
+++ b/views/articles/index.ejs
@@ -19,7 +19,7 @@
                     <%= article.createdAt.toLocaleDateString() %>
                 </div>
                 <div class="card-text mb-2" style="font-size: 1.5rem;font-style: italic"><%- article.sanitizedHtml %></div>
-                <a href="articles/<%= article.slug %>" class="btn btn-primary">Read More</a>
+                <a href="articles/<%= article.slug %>" class="btn btn-primary">Show Fullscreen</a>
                 <a href="articles/edit/<%= article.id %>" class="btn btn-info">Edit</a>
                 <form action="/articles/<%= article.id %>?_method=DELETE" method="POST" class="d-inline">
                     <button type="submit" class="btn btn-danger">Delete</button>
